--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.10.6",
     "reflect-metadata": "^0.1.13",
     "winston": "^3.3.3"
